# minder

./: .devdata.env  .gitignore  .readthedocs.yml  .travis.yml  MANIFEST.in  README.md  dot_env.example  flask_env.sh  minder_conf.yml  minder_conf.yml.example  prod-requirements.txt  pyproject.toml  requirements.txt  run-gunicorn.sh  run-uwsgi.sh  setup.cfg  setup.py  start-bot.py  startup.txt  tox.ini  uwsgi.ini
.github/workflows/: python-package.yml
docs/: Makefile  conf.py  index.rst
docs/pages/: intro.md
minder/: __init__.py  bot.py  cli.py  common.py  config.py  db.py  errors.py  models.py  scheduler.py  settings.py  types.py  utils.py
minder/bot/: __init__.py  checks.py  config.py
minder/cogs/: __init__.py  base.py  errors.py  reminder.py  settings.py  slash.py
minder/web/: __init__.py  app.py  forms.py  model.py
minder/web/blueprints/: api.py  app.py
minder/web/static/css/: datatables.css  datatables.min.css  editor.bootstrap4.min.css  editor.dataTables.min.css  jquery-ui.min.css
minder/web/static/scripts/: dataTables.editor.min.js  datatables.min.js  jquery-ui.min.js
minder/web/templates/: base.j2  manage.j2  navbar.j2
src/minder/: __init__.py  cli.py  common.py  config.py  errors.py  settings.py  utils.py  uwsgi.py
src/minder/bot/: __init__.py  checks.py  config.py  menus.py  views.py
src/minder/bot/templates/: index.j2
src/minder/cogs/: __init__.py  archive.py  backend.py  base.py  errors.py  reminder.py  reporting.py  settings.py  slash.py  status.py
src/minder/models/: __init__.py  reminders.py  settings.py  status.py
src/minder/web/: __init__.py  app.py  model.py
src/minder/web/blueprints/: __init__.py  api.py  app.py
src/minder/web/static/css/: jquery-ui.css  jquery-ui.structure.min.css  jquery-ui.theme.min.css  minder.css
src/minder/web/static/scripts/: datatables.js  jquery-ui.js  minder.js
src/minder/web/templates/: base.j2  login.j2  macros.j2  overview.j2  report.j2  success.j2
testing/: conftest.py  requirements.txt  test_bot.py  test_models.py  test_web_app.py  test_web_cli.py  test_web_db.py
