[metadata]
version = attr: minder.__version__

[flake8]
max-line-length = 160
rst-roles =
    attr,class,func,meth,mod,obj,ref,term,
    # Python programming language:
    py:func,py:meth,py:mod,py:class,py:exc,py:attr,py:obj,py:const

[tool:pytest]
addopts = --cov=minder --cov-config=setup.cfg --cov-report=term --cov-report=html:./report/pycov
testpaths = testing/
junit_family=xunit1
mocked-engines=minder.web.model.db.engine
mocked-sessions=minder.web.model.db.session

[coverage:report]
fail_under = 25
show_missing = true

[coverage:run]
branch = true
omit = testing/*

[paths]
source = minder/

[mypy]
mypy_path = minder
warn_return_any = True
show_error_codes = True

[mypy-aioredis.*,fakeredis.*,setuptools.*,discord.*,discord_slash.*,sqlalchemy.*,apscheduler.*,humanize.*,cogwatch.*,IPython,flask_bootstrap.*,flask_login.*,flask_pretty.*,flask_sqlalchemy.*,flask_moment.*,flask_wtf.*,wtforms.*,pytz.exceptions.*]
ignore_missing_imports = True
