; Metadata
[metadata]
name = minder-synistree
version = attr: minder.__version__
author = Jon Hannah
author_email = jon@synistree.com
description = Simple discord.py bot for helping with remembering things
url = https://github.com/synistree/minder

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

; Flake8
[flake8]
max-line-length = 160
rst-roles =
    attr,class,func,meth,mod,obj,ref,term,
    # Python programming language:
    py:func,py:meth,py:mod,py:class,py:exc,py:attr,py:obj,py:const

; pytest
[tool:pytest]
addopts = --cov=minder --cov-config=setup.cfg --cov-report=term --cov-report=html:./report/pycov
testpaths = testing/
junit_family=xunit1
mocked-engines=minder.web.model.db.engine
mocked-sessions=minder.web.model.db.session

; cov
[coverage:report]
fail_under = 25
show_missing = true

[coverage:run]
branch = true
omit = testing/*

[paths]
source = src/minder/

; mypy
[mypy]
mypy_path = stubs/:src/minder/
exclude = ./testing/*
warn_return_any = true
show_error_codes = true
namespace_packages = true

[mypy-setuptools.*,apscheduler.*,humanize.*,cogwatch.*,IPython.*,discord_slash.*,flask_sqlalchemy.*,flask_bootstrap.*,flask_login.*,flask_pretty.*,flask_moment.*,flask_wtf.*,wtforms.*,pytz.*,discord.ext.menus.*]
ignore_missing_imports = True

; tox
[tox]
skip_missing_interpreters = true
